# check_ocp_ver

./: .gitignore  Dockerfile  README.md  baseline.py  check.py  pyproject.toml  requirements.txt
src/check_ocp_ver/: __init__.py  baseline.py  check.py  entrypoint.py
