[project]
name = "check-ocp-ver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "tinydb>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "types-beautifulsoup4>=4.12.0.20240511",
    "types-requests>=2.32.0.20240712",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
